--- a/src/app/modules/posts/pages/post-create-page/post-create-page.component.html
+++ b/src/app/modules/posts/pages/post-create-page/post-create-page.component.html
@@ -20,18 +20,6 @@
                 </div>
                 <div class="col-md-12 mt-5">
 
-                    <h4 style="font-weight:bold">Tell us more about your project or service</h4>
-                    <p class="dark-grey-text  mb-5">
-                        Start with a bit about things descipe the service or project . </p>
-                    <div class="md-form">
-                        <i class="fas fa-pencil-alt prefix"></i>
-                        <textarea type="text" placeholder="Descripe service or project here" id="form8" class="md-textarea form-control" formControlName="description" mdbValidate mdbInput></textarea>
-                    </div>
-
-                    <div></div>
-                </div>
-                <div class="col-md-12 mt-5">
-
                     <h4 style="font-weight:bold">Price </h4>
                     <p class="dark-grey-text  mb-5">
                         price you may pay in $</p>
@@ -42,6 +30,32 @@
 
                     <div></div>
                 </div>
+                <div class="col-md-12 mt-5">
+                    <h4 style="font-weight:bold">Location </h4>
+                    <p class="dark-grey-text  mb-5">
+                        Location where service will be done </p>
+                    <div class="md-form">
+                        <i class="fas fa-pencil-alt prefix"></i>
+                        <input type="text" id="form11" class="md-textarea form-control" formControlName="location" mdbValidate mdbInput/>
+                    </div>
+
+                    <div></div>
+
+
+                </div>
+                <div class="col-md-12 mt-5">
+
+                    <h4 style="font-weight:bold">Tell us more about your project or service</h4>
+                    <p class="dark-grey-text  mb-5">
+                        Start with a bit about things descipe the service or project . </p>
+                    <div class="md-form">
+                        <i class="fas fa-pencil-alt prefix"></i>
+                        <textarea type="text" placeholder="Descripe service or project here" id="form8" class="md-textarea form-control" formControlName="description" mdbValidate mdbInput></textarea>
+                    </div>
+
+                    <div></div>
+                </div>
+
                 <div class="col-md-12 mt-5">
 
                     <h4 style="font-weight:bold">Add some keyword will help people find you </h4>
