--- a/src/app/shared/components/post-card/post-card.component.html
+++ b/src/app/shared/components/post-card/post-card.component.html
@@ -18,7 +18,7 @@
         {{post.description}}
     </mat-card-content>
 
-    <div class="d-inline"><span style="color:#365899" *ngFor="let item of tags"><a>#{{item}}</a></span></div>
+    <div class="d-inline" *ngIf="tags |async as alltags"><span style="color:#365899" *ngFor="let item of alltags"><a>#{{item}}</a></span></div>
     <mat-card-actions *ngIf="canComment">
         <hr>
         <button mat-button color="primary">Send message <i class="fas fa-envelope"></i></button>
@@ -26,7 +26,7 @@
         <hr>
     </mat-card-actions>
     <mat-card-content>
-        <div *ngFor="let item of post.comment" class="m-3">
+        <div *ngFor="let item of allComments | async" class="m-3">
             <app-comment [Comment]="item"></app-comment>
         </div>
         <div *ngIf="canComment" (keydown)="enter($event)">
