--- a/src/app/shared/components/hero-card/hero-card.component.html
+++ b/src/app/shared/components/hero-card/hero-card.component.html
@@ -1,8 +1,8 @@
 <mat-card class="hero-card">
-    <mat-card-header>
-        <div (click)="seePostDetails(post)" mat-card-avatar class="hero-header__image" [ngStyle]="{'background-image': 'url(' + post.avatarThumbnailUrl + ')'}"></div>
+    <mat-card-header *ngIf=" photo|async as p">
+        <div (click)="seePostDetails(post)" mat-card-avatar style="background-size: 40px 40px" class="hero-header__image" [ngStyle]="{'background-image': 'url(' + p.photoURL+ ')'}"></div>
         <mat-card-title class="text-primary" (click)="seePostDetails(post)">
-            <a [routerLink]="['/',post.uid]">{{post.name}}</a></mat-card-title>
+            <a [routerLink]="['/',post.uid]">{{p.displayName +' '+ p.familyName}}</a></mat-card-title>
         <mat-card-subtitle>{{post.date|date}}</mat-card-subtitle>
         <div class="flex-spacer"></div>
     </mat-card-header>
@@ -14,13 +14,16 @@
         <br>
 
     </mat-card-content>
-    <div class="d-inline"><span style="color:#365899" *ngFor="let item of tags"><a>#{{item}}</a></span></div>
+    <div class="d-inline m">
+        <span style="color:#365899" *ngFor="let item of tags |async"><a>#{{item}}</a></span></div>
     <br/>
-    <img *ngIf="post.avatarUrl" mat-card-image (click)="seeHeroDetails(post)" src="{{post.avatarUrl}}">
 
+    <div *ngIf="post.photos" class="mt-5 d-inline">
+        <img mat-card-image *ngFor="let item of post.photos" (click)="seeHeroDetails(post)" src="{{item}}">
+    </div>
     <mat-card-actions>
         <hr>
-        <button *ngIf="canComment" mat-button color="primary" (click)="sendMessage()">Send message <i class="fas fa-envelope"></i></button>
+        <button *ngIf="auth.userSigned|async" mat-button color="primary" (click)="sendMessage()">Send message <i class="fas fa-envelope"></i></button>
         <button mat-button [routerLink]="['/posts',post.id]">show Details</button>
         <hr>
     </mat-card-actions>
