--- a/src/app/shared/components/post-card/post-card.component.html
+++ b/src/app/shared/components/post-card/post-card.component.html
@@ -1,8 +1,8 @@
 <app-hero-loading *ngIf="!post"></app-hero-loading>
 <mat-card class="hero-card" *ngIf="post">
-    <mat-card-header>
-        <div (click)="seePostDetails(post)" mat-card-avatar class="hero-header__image" [ngStyle]="{'background-image': 'url(' + post.avatarThumbnailUrl + ')'}"></div>
-        <mat-card-title class="text-primary" (click)="seePostDetails(post)">{{post.name}}</mat-card-title>
+    <mat-card-header *ngIf=" photo|async as p">
+        <div (click)="seePostDetails(post)" mat-card-avatar class="hero-header__image" style="background-size: 40px 40px" [ngStyle]="{'background-image': 'url(' + p.photoURL+ ')'}"></div>
+        <mat-card-title class="text-primary" (click)="seePostDetails(post)">{{p.displayName +' '+ p.familyName}}</mat-card-title>
         <mat-card-subtitle>{{post.date|date}}</mat-card-subtitle>
         <div class="flex-spacer"></div>
         <!-- <div class="post-actions">
@@ -18,11 +18,16 @@
         {{post.description}}
     </mat-card-content>
 
-    <div class="d-inline" *ngIf="tags |async as alltags"><span style="color:#365899" *ngFor="let item of alltags"><a>#{{item}}</a></span></div>
+    <div class="d-inline m">
+        <span style="color:#365899" *ngFor="let item of tags |async"><a>#{{item}}</a></span></div>
+    <br/>
+
+    <div *ngIf="post.photos" class="mt-5 d-inline">
+        <img mat-card-image *ngFor="let item of post.photos" (click)="seeHeroDetails(post)" src="{{item}}">
+    </div>
     <mat-card-actions *ngIf="canComment">
         <hr>
-        <button mat-button color="primary">Send message <i class="fas fa-envelope"></i></button>
-        <button mat-button>SHARE</button>
+        <button mat-button color="primary" (click)="sendMessage()">Send message <i class="fas fa-envelope"></i></button>
         <hr>
     </mat-card-actions>
     <mat-card-content>
