--- a/src/app/shared/pages/error404-page/error404-page.component.html
+++ b/src/app/shared/pages/error404-page/error404-page.component.html
@@ -1,3 +1,3 @@
-<h1 class="header__title" i18n="@@error404">404 Error</h1>
+<h1 class="header__title mt-5" i18n="@@error404">404 Error</h1>
 <p class="explanation" i18n="@@mayTheForce">May the force be with you</p>
 <img src="assets/images/404.gif">
