--- a/src/app/shared/pages/home-page/home-page.component.html
+++ b/src/app/shared/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row">
     <div fxFlex="10" fxFlex.gt-sm="20"></div>
     <div fxFlex="90" fxFlex.gt-sm="80">
-        <h1 class="header__title" i18n="@@topHeroes"> most liked</h1>
+        <h1 class="header__title mt-5" i18n="@@topHeroes"> most liked</h1>
         <app-hero-loading *ngIf="!workdone"></app-hero-loading>
         <div id="heroes-list" *ngIf="workdone" [@fadeInOut]>
             <ng-container *ngFor="let post of posts">
